--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,9 +59,13 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+assets:
+ - asset/images/app_icon.png
+ - asset/images/background_picture.png
+ - asset/images/HDS_WoodWard_Elev.png
+ - asset/images/logo.png
+ - asset/images/project_picture.png
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
