--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
   cupertino_icons: ^1.0.4
   intl: ^0.17.0
   email_validator: ^2.0.0-nullsafety
-  shared_preferences: ^2.0.15
+  shared_preferences:
+
   flutter:
     sdk: flutter
   # The following adds the Cupertino Icons font to your application.
