--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   intl: ^0.17.0
   email_validator: ^2.0.0-nullsafety
   shared_preferences:
-  flutter_native_splash: ^2.2.4
+ # flutter_native_splash: ^2.2.4
 
   flutter:
     sdk: flutter
@@ -42,9 +42,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: "^0.9.2"
-flutter_native_splash:
-  image: asset/images/app_icon.png
-  color: '#ffffff'
+
+#flutter_native_splash:
+ # image: asset/images/app_icon.png
+ # color: '#ffffff'
+
 
 flutter_icons:
   android: "launcher_icon"
