--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   intl: ^0.17.0
   email_validator: ^2.0.0-nullsafety
   shared_preferences:
+  bloc: ^7.1.0
+  flutter_bloc: ^7.2.0
+  conditional_builder_null_safety: ^0.0.6
  # flutter_native_splash: ^2.2.4
 
   flutter:
